--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -229,7 +229,17 @@
         </div>
 
 
+        <div class="opss-border-all govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8">
+            <h2 class="govuk-heading-s">
+                Success - end of the task page(s)
+            </h2>
 
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-success-create" target="_blank">Success - the task has been completed</a> <br>This is the new page served at the end of every task. There is no Back link. We will use this page at the end of all tasks (except the final Accept and submit task, which has its own Confirmation page).
+                </li>
+            </ul>
+        </div>
 
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
