--- a/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-add-cosmetics-hint.html
@@ -12,7 +12,7 @@
             </summary>
             <div class="govuk-details__text">
                 <p class="govuk-body-s">
-                    Your progress in completing these tasks will be saved as a working draft until you accept and submit it.
+                    Your progress in completing each task is saved as a working draft until you are ready to accept and submit it.
                 </p>
 
                 <p class="govuk-body-s">
