--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -200,10 +200,22 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    *** TO DO ***<span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-view-draft" target="_blank">View this draft</a><br>
-                    This is the new page which the user can open to view the details of their draft notification so far. A 'Go back to the tasks list page link is offered.
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="/cosmetics-general/complete-product_b_notified" target="_blank">View this draft</a><br>
+                    This is the new page which the user can open to view the details of their draft notification so far. A 'Go back to the tasks list page link is offered. We will use the same <abbr>HTML</abbr> as used in the current incomplete and notified cosmetic product page (recently implimented by Marc). Here we can reuse this <abbr>HTML</abbr> to display what has been created via the tasks so far. Areas representing tasks which have not been completed are simply omitted. (We don't have a delete draft option link on this draft progress review page, but we do have a Back link. At the very bottom, we can have return link (as per the <abbr>HTML</abbr> p tag here): <p class="govuk-body">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
                 </li>
              </ul>
+        </div>
+
+        <div class="opss-border-all govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8">
+            <h2 class="govuk-heading-s">
+                Success - end of the task page(s)
+            </h2>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-success-create" target="_blank">Success - the task has been completed</a> <br>This is the new page served at the end of every task. There is no Back link. We will use this page at the end of all tasks (except the final Accept and submit task, which has its own Confirmation page).
+                </li>
+            </ul>
         </div>
 
         <div class="opss-border-all govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8">
@@ -227,20 +239,6 @@
                 </li>
             </ul>
         </div>
-
-
-        <div class="opss-border-all govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8">
-            <h2 class="govuk-heading-s">
-                Success - end of the task page(s)
-            </h2>
-
-            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                <li>
-                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-success-create" target="_blank">Success - the task has been completed</a> <br>This is the new page served at the end of every task. There is no Back link. We will use this page at the end of all tasks (except the final Accept and submit task, which has its own Confirmation page).
-                </li>
-            </ul>
-        </div>
-
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <p class="govuk-body">Latest <abbr>CSS</abbr> for prototyping: <a href="https://opss-html.herokuapp.com/public/stylesheets/application.css" class="govuk-link govuk-link--no-visited-state" target="_blank">application.css</a>.</p>
