--- a/app/views/cosmetics-general/tasks/pg-success-create.html
+++ b/app/views/cosmetics-general/tasks/pg-success-create.html
@@ -28,8 +28,9 @@
   </div>
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-      <p class="govuk-body govuk-!-padding-top-8 govuk-!-padding-bottom-4">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
+    <div class="govuk-grid-column-two-thirds">
+      <p class="govuk-body govuk-!-margin-bottom-4">Your completed tasks are saved as a Cosmetic product draft. You can complete the remaining tasks at any time.</p>
+      <p class="govuk-body">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
     </div>
   </div>
 
