--- a/app/views/cosmetics-general/incomplete-product_a.html
+++ b/app/views/cosmetics-general/incomplete-product_a.html
@@ -243,7 +243,7 @@
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Formulation</dt>
                     <dd class="govuk-summary-list__value">
-                        <a href="../mypdf.pdf">mypdf.pdf</a>
+                        <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf">mypdf.pdf</a>
                     </dd>
                     <dd class="govuk-summary-list__actions">
                         <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -349,7 +349,7 @@
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Formulation</dt>
                     <dd class="govuk-summary-list__value">
-                        <a href="../mypdf-1.pdf">mypdf-1.pdf</a>
+                        <a class="govuk-link govuk-link--no-visited-state" href="../mypdf-1.pdf">mypdf-1.pdf</a>
                     </dd>
                     <dd class="govuk-summary-list__actions">
                         <a href="#" class="govuk-link govuk-link--no-visited-state">
