--- a/app/views/psd-general/inc_opss-team-list.html
+++ b/app/views/psd-general/inc_opss-team-list.html
@@ -41,7 +41,7 @@
         <a href="mailto:bev.tolley@gmail.com" class="govuk-link govuk-link--no-visited-state">bev.tolley@gmail.com</a>
       </td>
       <td class="govuk-table__cell">
-        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Bruce Fanshawe</span></a>
+        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Bruce Fanshawe</span></a>
       </td>
     </tr>
     <tr class="govuk-table__row">
@@ -50,7 +50,7 @@
         <a href="mailto:bruce.fanshawe@beis.gov.uk" class="govuk-link govuk-link--no-visited-state">bruce.fanshawe@beis.gov.uk</a>
       </td>
       <td class="govuk-table__cell">
-        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Peter Suttonsworth</span></a>
+        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Peter Suttonsworth</span></a>
       </td>
     </tr>
     <tr class="govuk-table__row">
@@ -59,7 +59,7 @@
         <a href="mailto:jessicacoalsworth" class="govuk-link govuk-link--no-visited-state">jessicacoalsworth@gmail.co.uk</a>
       </td>
       <td class="govuk-table__cell">
-        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Joan Briggs</span></a>
+        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Joan Briggs</span></a>
       </td>
     </tr>
     <tr class="govuk-table__row">
@@ -85,7 +85,7 @@
         <a href="mailto:john.smith.gov.uk" class="govuk-link govuk-link--no-visited-state">john.smith@beis.gov.uk</a>
       </td>
       <td class="govuk-table__cell">
-        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">John Smith</span></a>
+        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">John Smith</span></a>
       </td>
     </tr>
     <tr class="govuk-table__row">
@@ -103,7 +103,7 @@
         <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 govuk-!-font-weight-bold">Resend invitation<span class="govuk-visually-hidden"> to Joe Kane</span></a>
       </td>
       <td class="govuk-table__cell">
-        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Joe Kane</span></a>
+        <a href="/psd-general/remove-member-links-confirm" class="govuk-link govuk-link--no-visited-state">Remove <span class="govuk-visually-hidden">Joe Kane</span></a>
       </td>
     </tr>
   </tbody>
