--- a/app/views/cosmetics-general/incomplete-product_b.html
+++ b/app/views/cosmetics-general/incomplete-product_b.html
@@ -19,7 +19,7 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">
-              <span class="govuk-caption-l">Incomplete notification: </span>
+              <span class="govuk-caption-l">Incomplete notification for: </span>
                 Browns Shampoo
             </h1>
           </div>
