small updates to delete

--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
@@ -19,7 +19,7 @@
           </div>
         </div>
 
-        <p class="govuk-body">Submission of the cosmetic product notification is complete.</p>
+        <p class="govuk-body">Submission of the Cosmetic product notification is complete. Your product is now one of your notified cosmetic products. </p>
 
         <h2 class="govuk-heading-m">What happens next</h2>
 
