--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -149,8 +149,8 @@
                     This is the "Delete draft" page. Yes or No. (Error message would state: "Select yes if you want to delete this draft"). The Cancel link is a hyperlink linking back to the draft page. The hint text includes the product name. Choosing No, returns the user back to the same product draft page. Yes, deletes the draft and the user goes to ...
                 </li>
                 <li>
-                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-delete-draft-success" target="_blank">Delete success</a><br>
-                    This page confirms the deletion. A hyperlink provides a direct route back to the Cosmetic products page. There is no Back link on this page (and a '<code>govuk-main-wrapper--auto-spacing</code>' class is added to the <code>&lt;main&gt;</code> element if possible).
+                    <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-delete-draft-success" target="_blank">Delete success</a><br>
+                    To confirm the deletion the user is sent to the Cosmetic products page. A notification banner at the top confirms the draft deletion. (The incomplete terminology will be updated to become drafts).
                 </li>
             </ul>
         </div>
