--- a/app/views/cosmetics-general/tasks/pg-delete-draft.html
+++ b/app/views/cosmetics-general/tasks/pg-delete-draft.html
@@ -53,7 +53,7 @@
         <div class="govuk-button-group">
           <button class="govuk-button ">Delete</button>
 
-          <a href="#" class="govuk-link govuk-link--no-visited-state">Cancel</a>
+          <!--a href="#" class="govuk-link govuk-link--no-visited-state">Cancel</a-->
         </div>
 
       </form>
