--- a/app/views/cosmetics-general/tasks/pg-remove-nanomaterial.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-nanomaterial.html
@@ -33,31 +33,31 @@
 
                     <div class="govuk-checkboxes govuk-!-margin-top-7">
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="nano" name="nano" type="checkbox" value="checkbox">
+                            <input class="govuk-checkboxes__input" id="nano" name="nano" type="checkbox" value="name1">
                             <label class="govuk-label govuk-checkboxes__label" for="nano">
                                 Nanomaterial name
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="nano-2" name="nano" type="checkbox" value="checkbox">
+                            <input class="govuk-checkboxes__input" id="nano-2" name="nano" type="checkbox" value="name2">
                             <label class="govuk-label govuk-checkboxes__label" for="nano-2">
                                 Another nanomaterial name
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="nano-3" name="nano" type="checkbox" value="checkbox">
+                            <input class="govuk-checkboxes__input" id="nano-3" name="nano" type="checkbox" value="name3">
                             <label class="govuk-label govuk-checkboxes__label" for="nano-3">
                                 This nanomaterial
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="nano-4" name="nano" type="checkbox" value="checkbox">
+                            <input class="govuk-checkboxes__input" id="nano-4" name="nano" type="checkbox" value="name4">
                             <label class="govuk-label govuk-checkboxes__label" for="nano-4">
                                 Name of the nanomaterial
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
-                            <input class="govuk-checkboxes__input" id="nano-5" name="nano" type="checkbox" value="checkbox">
+                            <input class="govuk-checkboxes__input" id="nano-5" name="nano" type="checkbox" value="name5">
                             <label class="govuk-label govuk-checkboxes__label" for="nano-5">
                                 Yet another nanomaterial name
                             </label>
