--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -90,7 +90,7 @@
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-1" target="_blank">Tasks list page 1</a>
-                    User clicks 'Add product' and lands here - seen as the user first visits the tasks list page. Their first task is 'Create the product'.
+                    User clicks 'Add product' and lands here - seen as the user first visits the tasks list page. Their first task is 'Create the product'. On the quantity question for items: the <b>user cannot enter 0 or 1</b>. "The minimum quantity is 2, or this is not a multi-item kit".
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-2c" target="_blank">Tasks list page 2c</a>
@@ -146,11 +146,11 @@
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-delete-draft" target="_blank">Delete draft</a><br>
-                    This is the "Delete draft" page. Yes or No. (Error message would state: "Select yes if you want to delete this draft"). The Cancel link is a hyperlink linking back to the draft page. The hint text includes the product name. Choosing No, returns the user back to the same product draft page. Yes, deletes the draft and the user goes to ...
+                    This is the "Delete draft" page. Yes or No. (Error message would state: "Select yes if you want to delete this draft"). The hint text includes the product name. Choosing No, returns the user back to the same product draft page. Yes, deletes the draft and the user goes to ...
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-delete-draft-success" target="_blank">Delete success</a><br>
-                    To confirm the deletion the user is sent to the Cosmetic products page. A notification banner at the top confirms the draft deletion. (The incomplete terminology will be updated to become drafts).
+                    To confirm the deletion the user is sent to the Cosmetic products page. A notification banner at the top confirms the draft deletion. (The "Incomplete notifications" terminology will be updated to become Drafts).
                 </li>
             </ul>
         </div>
@@ -172,6 +172,10 @@
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-nanomaterial" target="_blank">Remove (nanomaterials)</a> <br>
                     "Select which nanomaterial(s) to remove" - This is the new page to remove one or more nanomaterials: the user selects from a checkbox list of the nanomaterial names (even if they are still "Nanomaterial 1, 2, etc" and a 'Delete and continue' button returns the user to the task list page with the list updated. (No standalone confirmation page required and a green button is fine). The page includes hint text advising that if all nanomaterials are deleted they must complete the first task again to add nanomaterials. The Cancel link returns the user back to the Tasks list page.
                 </li>
+                <li>
+                    <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-nanomaterial-success" target="_blank">Remove (nanomaterials) success</a> <br>
+                    When the user is returned back to the task list after removing/deleting a nanomaterial this notification is added to the page. There is no Back link.
+                </li>
             </ul>
         </div>
 
@@ -188,7 +192,30 @@
                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-which-nanomaterials" target="_blank">Select which nanomaterials are included in the item</a> <br>This is the next new page in the flow (after 'What is the item called?', above) and <b>only</b> appears if the product has nanomaterials defined. A 'Cancel' link - next to the Continue button, is a hyperlink linking back to the task list page.
                 </li>
                 <li>
-                    Note: the next page in the flow ("Is the product intended to be rinsed off or left on?") is not a new page but it also only appears if the product has nanomaterials defined.
+                    <span class="govuk-!-font-weight-bold">Note:</span> the next page in the flow ("Is the product intended to be rinsed off or left on?") is not a new page but it also only appears if the product has nanomaterials defined.
+                </li>
+            </ul>
+        </div>
+
+        <div class="opss-border-all govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8">
+            <h2 class="govuk-heading-s">
+                Items list
+            </h2>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                   <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-item" target="_blank">Select which item to remove</a> <br>The user can only select one item to remove (via the use of radio inputs). If there are only 2 items, then the user is served this page ...
+                </li>
+                <li>
+                   <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-item-blocked" target="_blank">A multi-item kit product must include 2 or more items</a> <br>To avoid users converting products into single products, by leaving only one item (and the complications this entails) we serve the user this page. (We keep the Remove link on the tasks list page for conformity).
+                </li>
+                <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New feature:</span> Add (an item)<br>
+                    The <u>Add</u> link simply goes to the first page of the new items task ("What is the item called?"), and on completion adds the item to <b>top</b> of the item list as 'Completed'.
+                </li>
+                <li>
+                    <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-item-success" target="_blank">Remove (item) success</a> <br>
+                    When the user is returned back to the task list after removing/deleting an item this notification is added to the page. There is no Back link.
                 </li>
             </ul>
         </div>
@@ -242,6 +269,8 @@
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <p class="govuk-body">Latest <abbr>CSS</abbr> for prototyping: <a href="https://opss-html.herokuapp.com/public/stylesheets/application.css" class="govuk-link govuk-link--no-visited-state" target="_blank">application.css</a>.</p>
+
+            <p class="govuk-body">A future task will be to improve the copy throughout all the legacy pages, such as "What is the item called?" and "What's the product called". (What is the item name - What is the product called, etc).</p>
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
         <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
