--- a/app/views/cosmetics-general/tasks/task-page-4c.html
+++ b/app/views/cosmetics-general/tasks/task-page-4c.html
@@ -18,7 +18,7 @@
 
 <div class="govuk-grid-row opss-switch-cols">
     <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9 opss-switch-cols__right">
-        <a href="pg-view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+        <a href="/cosmetics-general/complete-product_b_notified.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
             View this draft
         </a>
 
@@ -84,11 +84,11 @@
                     </li>
                     <li class="app-task-list__item opss-task-sub__last">
                         <span class="app-task-list__task-name">
-                            <a href="add-nano-step.html" class="govuk-link govuk-link--no-visited-state">
+                            <a href="pg-nanomaterial-name.html" class="govuk-link govuk-link--no-visited-state">
                                 Add <span class="govuk-visually-hidden">another nanomaterial</span>
                             </a>
                             <span class="opss-task-sub__pipe">|</span>
-                            <a href="remove-nano-step.html" class="govuk-link govuk-link--no-visited-state">
+                            <a href="pg-remove-nanomaterial.html" class="govuk-link govuk-link--no-visited-state">
                                 Remove <span class="govuk-visually-hidden">a nanomaterial</span>
                             </a>
                         </span>
@@ -145,6 +145,17 @@
                         </span>
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="item-03-status">Not started</b>
+                    </li>
+                    <li class="app-task-list__item opss-task-sub__last">
+                        <span class="app-task-list__task-name">
+                            <a href="add-item-step.html" class="govuk-link govuk-link--no-visited-state">
+                                Add <span class="govuk-visually-hidden">another item</span>
+                            </a>
+                            <span class="opss-task-sub__pipe">|</span>
+                            <a href="pg-remove-item.html" class="govuk-link govuk-link--no-visited-state">
+                                Remove <span class="govuk-visually-hidden">an item</span>
+                            </a>
+                        </span>
                     </li>
                 </ul>
 
