--- a/app/views/cosmetics-general/tasks/task-page-nanomaterials.html
+++ b/app/views/cosmetics-general/tasks/task-page-nanomaterials.html
@@ -93,7 +93,7 @@
 
     </section>
     <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9">
-        <a href="pg-view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+        <a href="/cosmetics-general/complete-product_b_notified.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
             View this draft
         </a>
     </div>
