--- a/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-item-blocked.html
@@ -17,13 +17,18 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-m govuk-!-margin-bottom-7">A multi-item kit product must include 2 or more items</h1>
 
-        <p class="govuk-body">This product notification draft has defined the product as being a multi-item kit and currently includes 2 items. A product including only 1 item (or component) is classified as a single item product and not as a multi-item kit.</p>
+        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">You cannot remove an item</h1>
 
-        <p class="govuk-body">You can add more items and then remove items.</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">A multi-item kit product must include 2 or more items</p>
 
-        <p class="govuk-body">If this product is not a multi-item kit, please <a href="pg-delete-draft" class="govuk-link govuk-link--no-visited-state">delete this draft</a> and start again.</p>
+        <p class="govuk-body">This product notification draft has defined the product as being a multi-item kit and currently includes 2 items. A product including only 1 item (or component) is classified as a single item product and is not a multi-item kit product.</p>
+
+        <p class="govuk-body">To remove an item you must first add a new item.</p>
+
+        <div class="govuk-inset-text">
+            <p class="govuk-body">If the product is not a multi-item kit product, please <a href="pg-delete-draft" class="govuk-link govuk-link--no-visited-state">delete this draft</a>.</p>
+        </div>
 
         <p class="govuk-body">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
 
