--- a/app/views/psd-general/inc_opss-header-section.html
+++ b/app/views/psd-general/inc_opss-header-section.html
@@ -43,7 +43,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form action="#" method="post" novalidate>
+        <form action="#" method="post" role="search" spellcheck="false" novalidate>
             <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-7"> <!-- opss-border-bottom -->
 
                 <label class="govuk-label" for="cases-search">
@@ -51,7 +51,7 @@
                 </label>
 
                 <div class="govuk-input__wrapper opss-search__wrapper">
-                    <input class="govuk-input govuk-!-width-one-half" type="search" id="cases-search" name="cases-search" aria-describedby="search-hint">
+                    <input class="govuk-input govuk-!-width-one-half" type="search" id="cases-search" name="cases-search" spellcheck="false" aria-describedby="search-hint">
                     <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">
                         <span class="govuk-visually-hidden">Search</span>
                     </button>
