--- a/app/views/psd-general/inc_opss-sorting.html
+++ b/app/views/psd-general/inc_opss-sorting.html
@@ -1,4 +1,4 @@
-                        <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort" aria-controls="results-order">
+                        <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
                             <option value="" selected="selected"></option>
                             <option value="recent">Recent updates</option>
                             <option value="oldest">Oldest updates</option>
