--- a/app/views/index.html
+++ b/app/views/index.html
@@ -80,8 +80,7 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list-restricted" target="_blank">Cases page &quot;refresh&quot;</a> list only with a <b>restricted</b> card</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list-keywords" target="_blank">Cases page &quot;refresh&quot;</a> list only with a <b>keywords</b> examples</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-filters-keywords" target="_blank">Cases page &quot;refresh&quot;</a> filters &amp; keywords only</li>
-
-          </ul>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-form-test" target="_blank">Cases page</a> example to show where the <code>form</code> elements have now been moved (+ additional help text paragraph).</li>
 
           <p class="govuk-body"><b>Images:</b></p>
 
