--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -173,6 +173,18 @@
                     "Select which nanomaterial(s) to remove" - This is the new page to remove one or more nanomaterials: the user selects from a checkbox list of the nanomaterial names (even if they are still "Nanomaterial 1, 2, etc" and a 'Delete and continue' button returns the user to the task list page with the list updated. (No standalone confirmation page required and a green button is fine). The page includes hint text advising that if all nanomaterials are deleted they must complete the first task again to add nanomaterials. The Cancel link returns the user back to the Tasks list page.
                 </li>
                 <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New feature:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-nanomaterial-adopted" target="_blank">Remove (nanomaterials already included in item)</a> <br>
+                    This version of the above "Select which nanomaterial(s) to remove" page shows the additional inline text to show <b style="font-style: italic;">if</b> the nanomaterials have already been included in an item. This version of the page - if any of the nanomaterials have already been included in an item - we add the second sentence to the main hint text.
+                    <!--
+                        Q: There is another thing to consider in removing nanomaterials this time. I think it should not be possible to remove nano if its already used in component. Not sure we are thinking about such case
+
+                        A: I think we've already considered this. I think if a user removes a Nanomaterial that has already been used in a component it is removed from the component.
+But I think I should update the page design for the 'Select which nanomaterial to remove' so that each nanomaterial in the list shows which components it is already included in. (If none, then obviously we don't show any components with each nanomaterial).
+And in the 'Select which nanomaterial to remove' page (if nanomaterials have already been included in components) we also state that "you" (the user) can re-run any component/item task again to include Nanomaterials in them (and any nanomaterials which aren't listed must first be added either via the Add nanomaterials link, or via the first task).
+Also, on a slightly separate note, on the final review draft page, if any nanomaterials are orphaned (and are not include in any component) a big error message at the top of the page will inform the user that they first need to remove the orphaned nanomaterial before they can Approve and submit (the button is missing here).
+                     -->
+                </li>
+                <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-nanomaterial-success" target="_blank">Remove (nanomaterials) success</a> <br>
                     When the user is returned back to the task list after removing/deleting a nanomaterial this notification is added to the page. There is no Back link.
                 </li>
@@ -252,13 +264,16 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-1" target="_blank">Accept and submit pt1</a><br>
-                    The user clicks the Accept and submit task and goes to a page showing their full product draft with the ability to make changes (content details yet to be designed). Two of these forms elements also ask for confirmation of any change (with a checkbox). The bottom of the page has a 'Save and continue' button (with a 'Cancel' hyperlink, returning the user back to the task list page). (Errors and error messages on this page will functional as normal). The page has a Back button. Clicking the save and continue button, takes the user to...
-
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-1a" target="_blank">Accept and submit - review</a><br>
+                    The user clicks the Accept and submit task and goes to this review draft page. There is a Back link. The Green button is a 'Continue' hyperlink to the next formal Accept and submit page. The 'Cancel' link simply returns the user back to the tasks list page.
+                </li>
+                <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New feature:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-1a-errors" target="_blank">Accept and submit - review errors</a><br>
+                    This page shows how we will alert the user to problems with the draft. If there are nanomaterials which have not been included in any items (and are orphaned) we highlight this (and the green 'Continue' button is replaced with a hyperlink back to the tasks list page).
                 </li>
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-2" target="_blank">Accept and submit pt2</a><br>
-                    This page shows the full draft details (and is the same as the 'View the draft' page, but has the addition of the Declaration at the bottom with an 'Accetp and submit' button (and a 'Go back to the task list' hyperlink).
+                    This page shows the Declaration at the bottom with an 'Accetp and submit' button (and a 'Go back to the task list' hyperlink).
                 </li>
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-success" target="_blank">Accept and submit success</a><br>
