--- a/app/views/cosmetics-general/tasks/task-page-2b.html
+++ b/app/views/cosmetics-general/tasks/task-page-2b.html
@@ -84,9 +84,12 @@
                     </li>
                     <li class="app-task-list__item opss-task-sub__last">
                         <span class="app-task-list__task-name">
-                            <a href="pg-nanomaterial-name.html" class="govuk-link govuk-link--no-visited-state">
+                            <button class="govuk-button opss-button-link">
                                 Add <span class="govuk-visually-hidden">another nanomaterial</span>
-                            </a>
+                            </button>
+                            <!--a href="pg-nanomaterial-name.html" class="govuk-link govuk-link--no-visited-state">
+                                Add <span class="govuk-visually-hidden">another nanomaterial</span>
+                            </a-->
                             <span class="opss-task-sub__pipe">|</span>
                             <a href="pg-remove-nanomaterial.html" class="govuk-link govuk-link--no-visited-state">
                                 Remove <span class="govuk-visually-hidden">a nanomaterial</span>
