--- a/app/views/cosmetics-general/tasks/task-page-4c.html
+++ b/app/views/cosmetics-general/tasks/task-page-4c.html
@@ -148,9 +148,12 @@
                     </li>
                     <li class="app-task-list__item opss-task-sub__last">
                         <span class="app-task-list__task-name">
-                            <a href="add-item-step.html" class="govuk-link govuk-link--no-visited-state">
+                            <button class="govuk-button opss-button-link">
                                 Add <span class="govuk-visually-hidden">another item</span>
-                            </a>
+                            </button>
+                            <!--a href="add-item-step.html" class="govuk-link govuk-link--no-visited-state">
+                                Add <span class="govuk-visually-hidden">another item</span>
+                            </a-->
                             <span class="opss-task-sub__pipe">|</span>
                             <a href="pg-remove-item.html" class="govuk-link govuk-link--no-visited-state">
                                 Remove <span class="govuk-visually-hidden">an item</span>
