--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
@@ -20,7 +20,7 @@
   </h2>
   <div class="govuk-error-summary__body">
 
-    <p class="govuk-body">You cannot Accept and submit the draft because:</p>
+    <p class="govuk-body govuk-!-font-weight-bold opss-error-colour">You cannot Accept and submit the draft because:</p>
 
     <ul class="govuk-list govuk-list--bullet govuk-error-summary__list govuk-!-margin-bottom-5">
       <li>
