--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
@@ -97,12 +97,21 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Label image</dt>
                   <dd class="govuk-summary-list__value">
-                      <a href="#" class="govuk-link govuk-link--no-visited-state">Add product images</a>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                      <a href="#" class="govuk-link govuk-link--no-visited-state">
-                          Change<span class="govuk-visually-hidden"> the image label</span>
-                      </a>
+                      <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg (opens in new tab)</a>
+
+                        <!-- Or...
+                      <ul class="govuk-list govuk-list--bullet">
+                          <li>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-1.jpg (opens in new tab)</a>
+                          </li>
+                          <li>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-2.jpg (opens in new tab)</a>
+                          </li>
+                          <li>
+                              <a href="#" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">image-file-3.jpg (opens in new tab)</a>
+                          </li>
+                      </ul>
+                        -->
                   </dd>
               </div>
               <div class="govuk-summary-list__row">
@@ -191,12 +200,7 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Formulation</dt>
                   <dd class="govuk-summary-list__value">
-                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf">mypdf.pdf</a>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                      <a href="#" class="govuk-link govuk-link--no-visited-state">
-                          Change<span class="govuk-visually-hidden"> the Lorem ipsum title formulation document</span>
-                      </a>
+                      <a class="govuk-link govuk-link--no-visited-state" href="../my_pdf.pdf" rel="noreferrer noopener" target="_blank">my_pdf.pdf (opens in new tab)</a>
                   </dd>
               </div>
               <div class="govuk-summary-list__row">
@@ -297,12 +301,7 @@
               <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">Formulation</dt>
                   <dd class="govuk-summary-list__value">
-                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf-1.pdf">mypdf-1.pdf</a>
-                  </dd>
-                  <dd class="govuk-summary-list__actions">
-                      <a href="#" class="govuk-link govuk-link--no-visited-state">
-                          Change<span class="govuk-visually-hidden"> the ipsoniuum title formulation document</span>
-                      </a>
+                      <a class="govuk-link govuk-link--no-visited-state" href="../this-pdf.pdf" rel="noreferrer noopener" target="_blank">this-pdf.pdf (opens in new tab)</a>
                   </dd>
               </div>
               <div class="govuk-summary-list__row">
@@ -375,13 +374,9 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key ">Formulation</dt>
-                <dd class="govuk-summary-list__value ">
-                    <a class="govuk-link govuk-link--no-visited-state" href="/rails/active_storage/blobs/proxy/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBTQT09IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--2a14bcb37a6d8dcdafb51da20d31252407d30482/Ingredients_test%20(1)%20(1).pdf">Ingredients_test (1) (1).pdf</a>
-
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/2/notifications/59917298/components/50/formulation/edit">Change <span class="govuk-visually-hidden">formulation document</span></a>
-                </dd>
+                  <dd class="govuk-summary-list__value">
+                      <a class="govuk-link govuk-link--no-visited-state" href="../mypdf.pdf" rel="noreferrer noopener" target="_blank">mypdf.pdf (opens in new tab)</a>
+                  </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key ">Physical form</dt>
